# oxicast

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  build.rs  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: SUMMARY.md  api-overview.md  architecture.md  error-handling.md  getting-started.md
examples/: custom_namespace.rs  device_test.rs  discover_and_play.rs  event_monitor.rs  media_control.rs
src/: client.rs  discovery.rs  error.rs  event.rs  lib.rs  proto_gen.rs  serve.rs  state.rs  types.rs
src/channel/: connection.rs  media.rs  mod.rs  ns.rs  receiver.rs
src/client/: builder.rs  connection.rs  framing.rs  heartbeat.rs  request_tracker.rs  router.rs
tests/: mock_device.rs
website/: astro.config.mjs  package.json  pnpm-lock.yaml  sync-readme.mjs
website/public/: CNAME
website/src/content/docs/: api-overview.md  architecture.md  error-handling.md  index.mdx
website/src/styles/: custom.css
